@@ -32,6 +32,23 @@ int Sprite::getHeight() const {
     return rect.h;
 }
 
+void Sprite::renderGrid(int width, int height) {
+    SDL_Rect rectTo;
+    rectTo.x = 0;
+    rectTo.y = 0;
+    rectTo.w = getWidth();
+    rectTo.h = getHeight();
+    for (int i = 0; i < width; i++) {
+        for (int j = 0; j < height; j++) {
+            render(rectTo);
+            rectTo.y += rectTo.h;
+        }
+        rectTo.x += rectTo.w;
+        rectTo.y = 0;
+    }
+
+}
+
 /* Get a sprite out of a json. */
 void from_json(const json &j, Sprite &sprite) {
     /* It's an SDL_Rect so I can't write a from_json for it. */
