@@ -62,10 +62,6 @@ class WindowHandler {
     // w and h are the width and height of the player sprite.
     Rect findCamera(int x, int y, int w, int h);
 
-    // Render the texture from the Sprite to a 2d grid with width columns
-    // and height rows
-    void renderGrid(Sprite &sprite, int width, int height);
-
     // Create a texture and render all the textures to it, using the spacing 
     // variables from hotbar. The texture to is expected to have the correct 
     // width and height, and the vector is expected to have length 12.
@@ -75,12 +71,6 @@ class WindowHandler {
     // Draw the entire hotbar sprite to a texture. This only needs to be called
     // when the hotbar is first made, or when anything about it changes.
     void updateHotbarSprite(Hotbar &hotbar);
-
-    // Render the inventory to the screen
-    void renderInventory(Inventory &inventory);
-
-    /* Draw the whole inventory onto a single sprite. */
-    void updateInventorySprite(Inventory &inventory);
 
     // Render everything UI
     void renderUI(Player &player);
@@ -115,4 +105,3 @@ public:
         Player &player);
 };
 
-#endif
